--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -225,12 +225,12 @@ generator_test_results:
     - configurator
     - generator_test_results_sanity_checker
     - yaml_wrapper
-    - generator_test_results_backtrace
 
 generator_test_results_backtrace:
   compose:
      - configurator
      - tool_executor
+     - generator_test_results
 
 generator_test_results_sanity_checker:
   compose:
