♻️ Improved organization; more complete logic
- Single filtering of test cases for all crash scenarios
- Added significant samples of test executable output and test result files in comments
- Simplfied unity_utils removing unneeded functionality and renamed modules and methods

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -40,7 +40,7 @@ file_path_collection_utils:
   compose:
     - file_wrapper
 
-unity_utils:
+test_runner_manager:
   compose:
      - configurator
 
@@ -213,7 +213,7 @@ generator:
     - loginator
     - plugin_manager
     - file_wrapper
-    - unity_utils
+    - test_runner_manager
     - generator_test_results_backtrace
 
 generator_helper:
@@ -324,7 +324,7 @@ test_invoker_helper:
     - file_path_utils
     - file_wrapper
     - generator
-    - unity_utils
+    - test_runner_manager
 
 release_invoker:
   compose:
