✨ Added obnoxious & debug logging to config setup

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -83,6 +83,8 @@ configurator:
     - configurator_builder
     - yaml_wrapper
     - system_wrapper
+    - loginator
+    - reportinator
 
 configurator_setup:
   compose:
