Update project.yml samples.

--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -307,6 +307,29 @@
 #      :build_root: ./subprojectA/build
 #      :defines: []
 
+# :command_hooks:
+#   :pre_mock_preprocess:
+#   :post_mock_preprocess:
+#   :pre_test_preprocess:
+#   :post_test_preprocess:
+#   :pre_mock_generate:
+#   :post_mock_generate:
+#   :pre_runner_generate:
+#   :post_runner_generate:
+#   :pre_compile_execute:
+#   :post_compile_execute:
+#   :pre_link_execute:
+#   :post_link_execute:
+#   :pre_test_fixture_execute:
+#   :post_test_fixture_execute:
+#   :pre_test:
+#   :post_test:
+#   :pre_release:
+#   :post_release:
+#   :pre_build:
+#   :post_build:
+#   :post_error:
+
 ################################################################
 # TOOLCHAIN CONFIGURATION
 ################################################################
@@ -377,25 +400,4 @@
 #     :arguments: []
 #     :name: 
 #     :optional: FALSE
-# #These tools can be filled out when command_hooks plugin is enabled
-#   :pre_mock_preprocess
-#   :post_mock_preprocess
-#   :pre_mock_generate
-#   :post_mock_generate
-#   :pre_runner_preprocess
-#   :post_runner_preprocess
-#   :pre_runner_generate
-#   :post_runner_generate
-#   :pre_compile_execute
-#   :post_compile_execute
-#   :pre_link_execute
-#   :post_link_execute
-#   :pre_test_fixture_execute
-#   :pre_test
-#   :post_test
-#   :pre_release
-#   :post_release
-#   :pre_build
-#   :post_build
-#   :post_error
 ...
