--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -13,7 +13,7 @@
 
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
-  :use_test_preprocessor: TRUE
+  :use_test_preprocessor: :all
   :use_backtrace: :none
   :use_decorators: :auto #Decorate Ceedling's output text. Your options are :auto, :all, or :none
 
