--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -13,7 +13,7 @@
 
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
-  :use_test_preprocessor: TRUE
+  :use_test_preprocessor: :all
   :use_backtrace: :none
 
   # tweak the way ceedling handles automatic tasks
