🐛 Fixed new defaults handling
- Moved CMock static defaults to defaults.rb
- Added logic to `merge_tool_defauts()` that handles the very likely scneario of certain optional project configuration values missing in a user-provided configuration
- Refactored `ConfigWalkinator.fetch_value()` to be more capable and safe
- Added tests for `ConfigWalkinator.fetch_value()`

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -81,6 +81,7 @@ configurator:
     - configurator_setup
     - configurator_plugins
     - configurator_builder
+    - config_walkinator
     - yaml_wrapper
     - system_wrapper
     - loginator
