--- a/plugins/gcov/config/defaults.yml
+++ b/plugins/gcov/config/defaults.yml
@@ -9,11 +9,19 @@
 :gcov:
   :summaries: TRUE                # Enable simple coverage summaries to console after tests
   :report_task: FALSE             # Disabled dedicated report generation task (this enables automatic report generation)
+
   :utilities:
     - gcovr                       # Defaults to `gcovr` as report generation utility
+
   :reports: []                    # User must specify a report to enable report generation
+
   :gcovr:
     :report_root: "."             # Gcovr defaults to scanning for results starting in working directory
+
+                                  # For v6.0+ merge coverage results for same function tested multiple times
+                                  # The default behavior is 'strict' which will cause a gcovr exception for many users
+    :merge_mode_function: merge-use-line-max
+
   :report_generator:
     :verbosity: Warning           # Default verbosity
     :collection_paths_source: []  # Explicitly defined as default empty array to simplify option validation code
