✨ Added :flags & :defines validation
Also incorporated Reportinator for configuration walk formatting

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -93,6 +93,7 @@ configurator_setup:
     - configurator_validator
     - configurator_plugins
     - loginator
+    - reportinator
     - file_wrapper
 
 configurator_plugins:
