* Refactor loginator for background processing * Refactor batchinator for better handling of exceptions * Refactor test build to directly drive builds in parallel again (not rake invoked)

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -308,6 +308,7 @@ test_invoker:
     - generator
     - test_context_extractor
     - file_path_utils
+    - file_finder
     - file_wrapper
     - verbosinator
 
