restore ability to do deep include tracking (now called :use_deep_preprocessor). This is primarily to handle situations where mocks need includes further down the include chain.

--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -13,9 +13,10 @@
 
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
-  :use_test_preprocessor: :none
-  :use_backtrace: :simple
-  :use_decorators: :auto #Decorate Ceedling's output text. Your options are :auto, :all, or :none
+  :use_test_preprocessor: :none  # options are :none, :mocks, :tests, or :all
+  :use_deep_preprocessor: :mocks # options are :none, :mocks, :tests, or :all
+  :use_backtrace: :simple        # options are :none, :simple, or :gdb
+  :use_decorators: :auto         # decorate Ceedling's output text. options are :auto, :all, or :none
 
   # tweak the way ceedling handles automatic tasks
   :build_root: build
