--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -13,8 +13,11 @@
 
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
-  :use_test_preprocessor: :all
-  :use_backtrace: :none
+  :use_test_preprocessor: :all   # options are :none, :mocks, :tests, or :all
+  :use_deep_preprocessor: :mocks # options are :none, :mocks, :tests, or :all
+  :use_backtrace: :none          # options are :none, :simple, or :gdb
+  :use_decorators: :auto         # decorate Ceedling's output text. options are :auto, :all, or :none
+
 
   # tweak the way ceedling handles automatic tasks
   :build_root: build
