--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -272,6 +272,7 @@ preprocessinator_includes_handler:
     - configurator
     - tool_executor
     - test_context_extractor
+    - file_wrapper
     - yaml_wrapper
     - loginator
     - reportinator
