--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -269,10 +269,9 @@
     # :html_encoding: UTF-8
 
 # :module_generator:
-#   :project_root: ./
-#   :source_root: source/
-#   :inc_root: includes/
-#   :test_root: tests/
+#   :path_src: source/
+#   :path_inc: includes/
+#   :path_tst: tests/
 #   :naming: :snake #options: :bumpy, :camel, :caps, or :snake
 #   :includes:
 #     :tst: []
