Fix Valgrind plugin and add tests
This commit fixes the Valgrind plugin by removing some deprecated
functions and updating some function signatures. This commit also adds
tests to serve as regression testing to prevent the Valgrind plugin from
being broken by future refactoring changes.

Signed-off-by: James Raphael Tiovalen <jamestiotio@gmail.com>

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -65,6 +65,7 @@
     #- dependencies                   # automatically fetch 3rd party libraries, etc.
     #- subprojects                    # managing builds and test for static libraries
     #- fake_function_framework        # use FFF instead of CMock
+    #- valgrind                       # detect memory management and threading bugs using valgrind. Requires valgrind for your platform
 
     # Report options (You'll want to choose one stdout option, but may choose multiple stored options if desired)
     #- report_build_warnings_log
