🎨 Refactored handling of `batchinator` to return processed information for later improvements. ⬆️ Added `parallel` gem dependency

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -8,7 +8,7 @@
 ---
 :project:
   # how to use ceedling. If you're not sure, leave this as `gem` and `?`
-  :which_ceedling: gem
+  :which_ceedling: ../../
   :ceedling_version: '?'
 
   # optional features. If you don't need them, keep them turned off for performance
