Fix bug in gcovr plugin using wrong option set.

--- a/plugins/gcov/config/defaults.yml
+++ b/plugins/gcov/config/defaults.yml
@@ -17,6 +17,7 @@
 
   :gcovr:
     :report_root: "."             # Gcovr defaults to scanning for results starting in working directory
+    :config_file: ~               # Specify the location of the GCOVR configuration file to use that instead of settings config here
 
                                   # For v6.0+ merge coverage results for same function tested multiple times
                                   # The default behavior is 'strict' which will cause a gcovr exception for many users
